# Doggoscript

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DoggoscriptConfig.hpp.in  LICENSE  README.md  SECURITY.md  book.toml  example.ds  getting-started.html  grammar.txt  importing-a-file.html  index.html  math.ds  print.html  searchindex.js  searchindex.json  test.ds
.github/ISSUE_TEMPLATE/: bug_report.md
basic-syntax/: control-flow.html  data-types.html  functions.html  variables.html
basic-syntax/data-types/: boolean.html  dictionary.html  list.html  number.html  string.html
built-in-functions/: input.html  print.html  str.html
classes-and-objects/: classes.html  instances.html
doggoscript/: CMakeLists.txt  DoggoscriptConfig.hpp.in
doggoscript/include/doggoscript/: context.hpp  doggoscript.hpp  error.hpp  interpreter.hpp  lexer.hpp  nodes.hpp  parser.hpp  position.hpp  token.hpp
doggoscript/include/doggoscript/types/: class.hpp  function.hpp  instance.hpp  object.hpp  statements.hpp  types.hpp
doggoscript/include/doggoscript/types/classes/: boolean_class.hpp  classes.hpp  dict_class.hpp  error_class.hpp  list_class.hpp  number_class.hpp  string_class.hpp
doggoscript/include/doggoscript/types/functions/: functions.hpp  input.hpp  load_file.hpp  print.hpp  save_file.hpp  str.hpp
doggoscript/src/: doggoscript.cpp  interpreter.cpp  lexer.cpp  parser.cpp  token.cpp
doggoscript/src/types/classes/: boolean_class.cpp  dict_class.cpp  error_class.cpp  list_class.cpp  number_class.cpp  string_class.cpp
getting-started/: hello-world.html
includes/doggoscript/: context.hpp  doggoscript.hpp  error.hpp  interpreter.hpp  lexer.hpp  nodes.hpp  parser.hpp  position.hpp  token.hpp
includes/doggoscript/types/: boolean.hpp  class.hpp  dict.hpp  function.hpp  instance.hpp  list.hpp  number.hpp  object.hpp  statements.hpp  string.hpp  types.hpp
includes/doggoscript/types/classes/: boolean_class.hpp  number_class.hpp  string_class.hpp
includes/doggoscript/types/functions/: append.hpp  dict_get.hpp  dict_set.hpp  extend.hpp  functions.hpp  get.hpp  input.hpp  len.hpp  load_file.hpp  pop.hpp  print.hpp  save_file.hpp  str.hpp
looping/: for-loop.html  while-loop.html
src/: SUMMARY.md  getting-started.md  importing-a-file.md  introduction.md  main.cpp
src/basic-syntax/: control-flow.md  data-types.md  functions.md  variables.md
src/basic-syntax/data-types/: boolean.md  dictionary.md  list.md  number.md  string.md
src/built-in-functions/: input.md  print.md  str.md
src/classes-and-objects/: classes.md  instances.md
src/doggoscript/: doggoscript.cpp  interpreter.cpp  lexer.cpp  nodes.cpp  parser.cpp  token.cpp
src/doggoscript/types/classes/: boolean_class.cpp  dict_class.cpp  list_class.cpp  number_class.cpp  string_class.cpp
src/getting-started/: hello-world.md
src/looping/: for-loop.md  while-loop.md
tests/: interpreter_tests.cpp  lexer_tests.cpp  parser_tests.cpp
